welcome.lessons.welcome.bat.bool2.WithoutDoubles.scala.error
withoutDoubles:3: error: type mismatch;
 found   : Unit
 required: Int
  else if (die1==die2){return die1*2+1}
       ^